--- a/eng/pipelines/templates/install.yml
+++ b/eng/pipelines/templates/install.yml
@@ -3,9 +3,6 @@ parameters:
   - name: nodeVersion
     type: string
     default: 20.x
-  - name: pnpm_config_cache
-    type: string
-    default: $(Pipeline.Workspace)/.pnpm-store
 
 steps:
   - task: UseDotNet@2
@@ -21,13 +18,13 @@ steps:
   - task: Cache@2
     inputs:
       key: 'pnpm | "$(Agent.OS)" | pnpm-lock.yaml'
-      path: $(pnpm_config_cache)
-    displayName: Cache pnpm
+      path: $(Pipeline.Workspace)/.pnpm-store
+    displayName: Cache pnpm store
 
   - script: |
       corepack enable
       corepack prepare pnpm@latest-8 --activate
-      pnpm config set store-dir $(pnpm_config_cache)
+      pnpm config set store-dir $(Pipeline.Workspace)/.pnpm-store
     displayName: "Setup pnpm"
 
   - script: |
