--- a/eng/pipelines/templates/install.yml
+++ b/eng/pipelines/templates/install.yml
@@ -22,12 +22,12 @@ steps:
       key: 'pnpm | "$(Agent.OS)" | pnpm-lock.yaml'
       path: ${{ parameters.pnpmStorePath }}
     displayName: Cache pnpm store
-
   - script: |
       corepack enable
       corepack prepare pnpm@latest-8 --activate
-      pnpm config set store-dir ${{ parameters.pnpmStorePath }}
-    displayName: "Setup pnpm"
+    displayName: Install pnpm
+  - script: pnpm config set store-dir ${{ parameters.pnpmStorePath }}
+    displayName: Setup pnpm cache dir
 
   - script: |
       echo "Node:"
