--- a/eng/pipelines/jobs/e2e-job.yml
+++ b/eng/pipelines/jobs/e2e-job.yml
@@ -15,10 +15,12 @@ jobs:
         submodules: true
 
       - template: /eng/pipelines/templates/install.yml
+      - template: /eng/pipelines/templates/install-browsers.yml
 
       - template: /eng/pipelines/templates/build.yml
-        parameters:
-          nodeVersion: "20.x"
 
       - script: node packages/e2e-tests/e2e-tests.mjs
-        displayName: Run E2E tests
+        displayName: Cadl Ranch e2e tests
+
+      - script: pnpm e2e
+        displayName: UI Tests
