--- a/eng/pipelines/templates/upload-coverage.yml
+++ b/eng/pipelines/templates/upload-coverage.yml
@@ -4,6 +4,5 @@ steps:
 
   - task: PublishCodeCoverageResults@2
     inputs:
-      codeCoverageTool: "Cobertura"
-      summaryFileLocation: $(Build.SourcesDirectory)/coverage/cobertura-coverage.xml
+      summaryFileLocation: $(Build.SourcesDirectory)/packages/*/coverage/cobertura-coverage.xml
     displayName: Publish code coverage
