--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "purge": "rimraf --glob \"packages/*/node_modules/\" --glob \"core/packages/*/node_modules/\"",
     "regen-docs": "pnpm run-all  --parallel --aggregate-output --reporter=append-only run regen-docs",
     "regen-samples": "pnpm run-all run regen-samples",
-    "test-official": "pnpm run-all --aggregate-output --reporter=append-only --sequential test-official",
+    "test:ci": "pnpm -r --filter=!./core/ --filter=!./core/** --aggregate-output --reporter=append-only --sequential test:ci",
     "test:e2e": "pnpm run-all run test:e2e",
-    "test": "pnpm run-all --aggregate-output --reporter=append-only run test",
+    "test": "pnpm run-all run test",
     "update-latest-docs": "pnpm run-all run update-latest-docs",
     "watch": "tsc --build ./tsconfig.ws.json --watch"
   },
