Make sure to include test results

--- a/eng/pipelines/jobs/build-and-test.yml
+++ b/eng/pipelines/jobs/build-and-test.yml
@@ -57,5 +57,5 @@ steps:
       mergeTestResults: true
       failTaskOnFailedTests: false
       testRunTitle: "Test os: ${{ parameters.osName }}, node: ${{ parameters.nodeVersion }}"
-    displayName: Publish non-core test results
+    displayName: Publish test results
     condition: always()
