--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -7,6 +7,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+  merge_group:
   workflow_dispatch: {}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
