PR checks perf improvements and organization (#568)
Result when from 30-35min pipelines to under 20min

- Use corepack to install pnpm: Faster and respect the pnpm version set
in package.json instead of having another place to keep up to date
- dependency cache
- move swagger check to seperate job
- upgrade to new code coverage task
- Don't run core tests in ci
- Move all consitency check to independent github action workflow(Makes
it easier to see which one failed immediately without having to open
devops and dig into the steps)

--- a/eng/pipelines/pr.yml
+++ b/eng/pipelines/pr.yml
@@ -1,4 +1,7 @@
-trigger: none
+trigger:
+  branches: # Used to trigger for GitHub merge queues
+    include:
+      - gh-readonly-queue/*
 pr:
   - main
   - release/*
@@ -9,9 +12,9 @@ extends:
     variables:
       - template: /eng/pipelines/templates/variables/globals.yml@self
     stages:
-      - stage: Build_And_Test
+      - stage: CI
         jobs:
-          - job: Build_And_Test_Linux
+          - job: Linux
             variables:
               TYPESPEC_VS_CI_BUILD: true # Enable official Visual Studio extension build
               TYPESPEC_SKIP_DOCUSAURUS_BUILD: true # Disable docusaurus build
@@ -35,11 +38,7 @@ extends:
                   dotnetVersion: 8.0.x
                   osName: linux
 
-              - template: /eng/pipelines/templates/swagger-checks.yml@self
-                parameters:
-                  nodeVersion: $(nodeVersion)
-
-          - job: Build_And_Test_Windows
+          - job: Windows
             variables:
               TYPESPEC_VS_CI_BUILD: true # Enable official Visual Studio extension build
               TYPESPEC_SKIP_DOCUSAURUS_BUILD: true # Disable docusaurus build
@@ -63,9 +62,16 @@ extends:
                   dotnetVersion: 8.0.x
                   osName: windows
 
+          - template: /eng/pipelines/jobs/e2e-job.yml@self
+          - job: AutorestChecks
+            displayName: "Autorest Checks"
+            pool:
+              name: $(LINUXPOOL)
+              image: $(LINUXVMIMAGE)
+              os: linux
+
+            steps:
               - template: /eng/pipelines/templates/swagger-checks.yml@self
                 parameters:
-                  nodeVersion: $(nodeVersion)
-
-          - template: /eng/pipelines/jobs/e2e-job.yml@self
+                  nodeVersion: 20.x
           - template: /eng/pipelines/jobs/publish-artifacts.yml@self
