--- a/eng/pipelines/jobs/build-and-test.yml
+++ b/eng/pipelines/jobs/build-and-test.yml
@@ -14,56 +14,20 @@ steps:
     parameters:
       nodeVersion: ${{ parameters.nodeVersion }}
 
-  # Only running UI test on linux
-  - ${{ if ne(variables['Agent.OS'], 'Windows_NT') }}:
-      - template: /eng/pipelines/templates/install-browsers.yml
-
-  - script: pnpm run check-version-mismatch
-    displayName: Check version mismatch
-
   - template: /eng/pipelines/templates/build.yml
 
-  - script: pnpm run test-official
+  - script: pnpm run test:ci
     displayName: Test
 
   - template: /eng/pipelines/templates/upload-coverage.yml
 
-  - script: pnpm run check-format
-    displayName: Check Formatting
-    condition: ne(variables['Agent.OS'], 'Windows_NT')
-
-  - script: pnpm run lint
-    displayName: Lint
-    condition: ne(variables['Agent.OS'], 'Windows_NT')
-
-  - script: node eng/scripts/download-common-types.js v3
-    displayName: Swagger - Fetch common-types v3
-    condition: ne(variables['Agent.OS'], 'Windows_NT')
-
   - script: node eng/scripts/check-for-changed-files.js
     displayName: Check Git Status For Changed Files
-
-  - script: pnpm run cspell
-    displayName: Spell check
-    condition: ne(variables['Agent.OS'], 'Windows_NT')
 
   # Unlink node_modules folders to significantly improve performance of subsequent tasks
   # which need to walk the directory tree (and are hardcoded to follow symlinks).
   - script: pnpm run purge
     displayName: "Purge dependencies"
-    condition: always()
-
-  # It's important for performance to pass "packages" as "searchFolder" to avoid looking under root "node_modules".
-  # PublishTestResults.searchFolder only supports absolute paths, not relative.
-  - task: PublishTestResults@2
-    inputs:
-      testResultsFormat: "JUnit"
-      searchFolder: "$(System.DefaultWorkingDirectory)/core/packages"
-      testResultsFiles: "*/test-results.xml"
-      mergeTestResults: true
-      failTaskOnFailedTests: false
-      testRunTitle: "[CORE] Test os: ${{ parameters.osName }}, node: ${{ parameters.nodeVersion }}"
-    displayName: Publish core test results
     condition: always()
 
   - task: PublishTestResults@2
@@ -73,14 +37,6 @@ steps:
       testResultsFiles: "*/test-results.xml"
       mergeTestResults: true
       failTaskOnFailedTests: false
-      testRunTitle: "[NON-CORE] Test os: ${{ parameters.osName }}, node: ${{ parameters.nodeVersion }}"
-    displayName: Publish non-core test results
+      testRunTitle: "Test os: ${{ parameters.osName }}, node: ${{ parameters.nodeVersion }}"
+    displayName: Publish test results
     condition: always()
-
-  # Disable for now as e2e test are disabled - REMOVE BEFORE MERGING
-  # - task: 1ES.PublishPipelineArtifact@1
-  #   displayName: Publish UI tests artifacts
-  #   condition: ne(variables['Agent.OS'], 'Windows_NT')
-  #   inputs:
-  #     path: : ./core/packages/playground-website/test-results
-  #     artifact: "uitestresults-${{ parameters.osName }}-node-${{ parameters.nodeVersion }}"
