--- a/eng/pipelines/jobs/build-and-test.yml
+++ b/eng/pipelines/jobs/build-and-test.yml
@@ -14,6 +14,9 @@ steps:
     parameters:
       nodeVersion: ${{ parameters.nodeVersion }}
 
+  - script: pnpm run check-version-mismatch
+    displayName: Check version mismatch
+
   - template: /eng/pipelines/templates/build.yml
 
   - script: pnpm run test:ci
