--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,8 +53,7 @@
   },
   "typescript.tsdk": "./core/packages/compiler/node_modules/typescript/lib",
   "git.ignoreLimitWarning": true,
-  "vitest.enable": true,
-  "vitest.commandLine": "node ./core/packages/compiler/node_modules/vitest/vitest.mjs",
+  "vitest.workspaceConfig": "./vitest.workspace.ts",
   "prettier.configPath": ".prettierrc.json",
   "prettier.ignorePath": ".prettierignore",
   "prettier.prettierPath": "./core/packages/compiler/node_modules/prettier/index.cjs",
