--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -4,9 +4,9 @@ name: Consistency
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main"]
+    branches: ["main", "release/*"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "release/*"]
   merge_group:
   workflow_dispatch: {}
 
