--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -23,8 +23,8 @@ jobs:
 
       - uses: ./.github/actions/setup
 
-      - run: git pull --force --no-tags origin main:main
-        name: Get main ref
+      - run: git pull --force --no-tags origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+        name: Get ${{ github.event.pull_request.base.ref }} ref
 
       - run: pnpm install
         name: Install dependencies
