--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -4,9 +4,9 @@ name: Consistency
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main"]
+    branches: ["main", "release/*"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "release/*"]
   merge_group:
   workflow_dispatch: {}
 
@@ -23,8 +23,8 @@ jobs:
 
       - uses: ./.github/actions/setup
 
-      - run: git pull --force --no-tags origin main:main
-        name: Get main ref
+      - run: git pull --force --no-tags origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+        name: Get ${{ github.event.pull_request.base.ref }} ref
 
       - run: pnpm install
         name: Install dependencies
