ignore check in merge queue

--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run: npx chronus verify
         name: Check changelog
-        if: ${{ !startsWith(github.head_ref, 'publish/') && !startsWith(github.head_ref, 'dependabot/') && !startsWith(github.head_ref, 'backmerge/') }}
+        if: ${{ !startsWith(github.head_ref, 'publish/') && !startsWith(github.head_ref, 'dependabot/') && !startsWith(github.head_ref, 'backmerge/') && !startsWith(github.head_ref, 'gh-readonly-queue/') }}
 
       - run: node eng/scripts/validate-core-submodule.js
         name: Check that core submodule is merged to core repo
