--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -24,14 +24,18 @@ jobs:
       - uses: ./.github/actions/setup
 
       - run: git pull --force --no-tags origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
-        name: Get ${{ github.event.pull_request.base.ref }} ref
+        name: Get ${{ github.event.pull_request.base.ref }} ref for ${{ github.head_ref}}
 
       - run: pnpm install
         name: Install dependencies
 
       - run: npx chronus verify
         name: Check changelog
-        if: ${{ !startsWith(github.head_ref, 'publish/') && !startsWith(github.head_ref, 'dependabot/') && !startsWith(github.head_ref, 'backmerge/') && !startsWith(github.head_ref, 'gh-readonly-queue/') }}
+        if: |
+          !startsWith(github.head_ref, 'publish/') &&
+          !startsWith(github.head_ref, 'dependabot/') &&
+          !startsWith(github.head_ref, 'backmerge/') &&
+          !startsWith(github.head_ref, 'gh-readonly-queue/') }}
 
       - run: node eng/scripts/validate-core-submodule.js
         name: Check that core submodule is merged to core repo
