--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: ./.github/actions/setup
 
       - run: git pull --force --no-tags origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
-        name: Get ${{ github.event.pull_request.base.ref }} ref for ${{ github.head_ref}}
+        name: Get ${{ github.event.pull_request.base.ref }} ref for ${{ github.ref}}, evt ${{ github.event_name }}
 
       - run: pnpm install
         name: Install dependencies
@@ -35,7 +35,7 @@ jobs:
           !startsWith(github.head_ref, 'publish/') &&
           !startsWith(github.head_ref, 'dependabot/') &&
           !startsWith(github.head_ref, 'backmerge/') &&
-          !startsWith(github.head_ref, 'gh-readonly-queue/')
+          ne(github.event_name, 'merge_queue')
 
       - run: node eng/scripts/validate-core-submodule.js
         name: Check that core submodule is merged to core repo
