--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,4 @@ packages:
   - packages/*
   - core/ # Install core workspace dependencies too. Needed for prettier plugins
   - core/packages/*
+  - "!core/packages/http-client-csharp/**"
