--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -37,6 +37,7 @@
     "build": "npm run build-samples && tsc -p . && vite build 2>&1",
     "start": "npm run -s watch",
     "test": "vitest run",
+    "test:ci": "vitest run",
     "test:watch": "vitest -w",
     "watch": "vite --port 5174",
     "test:e2e": "cross-env PW_EXPERIMENTAL_TS_ESM=1 playwright test -c e2e",
