--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,8 +58,8 @@
   "prettier.ignorePath": ".prettierignore",
   "prettier.prettierPath": "./core/packages/compiler/node_modules/prettier/index.cjs",
   "prettier.documentSelectors": ["**/*.tsp"],
-  "testExplorer.errorDecoration": false,
   "typespec.tsp-server.path": "${workspaceRoot}/core/packages/compiler",
   "cSpell.words": ["autorest", "typespec"],
-  "dotnet.defaultSolution": "disable"
+  "dotnet.defaultSolution": "disable",
+  "eslint.experimental.useFlatConfig": true // Still needed new version coming soon should work without https://github.com/microsoft/vscode-eslint/issues/1644
 }
