--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -43,8 +43,8 @@
     "test:watch": "vitest -w",
     "test:ui": "vitest --ui",
     "test:ci": "vitest run --coverage  --reporter=junit --reporter=default",
-    "lint": "eslint . --ext .ts --max-warnings=0",
-    "lint:fix": "eslint . --fix --ext .ts",
+    "lint": "eslint .  --max-warnings=0",
+    "lint:fix": "eslint . --fix ",
     "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../docs/libraries/typespec-client-generator-core/reference"
   },
   "files": [
@@ -68,8 +68,8 @@
     "@types/node": "~18.11.19",
     "@types/pluralize": "^0.0.33",
     "@typespec/compiler": "workspace:~",
-    "@typespec/eslint-config-typespec": "workspace:~",
-    "@typespec/eslint-plugin": "workspace:~",
+    
+    
     "@typespec/http": "workspace:~",
     "@typespec/library-linter": "workspace:~",
     "@typespec/prettier-plugin-typespec": "workspace:~",
@@ -79,7 +79,7 @@
     "@vitest/coverage-v8": "^1.4.0",
     "@vitest/ui": "^1.4.0",
     "c8": "^9.1.0",
-    "eslint": "^8.57.0",
+    
     "rimraf": "~5.0.5",
     "typescript": "~5.4.3",
     "vitest": "^1.4.0"
