--- a/packages/typespec-service-csharp/package.json
+++ b/packages/typespec-service-csharp/package.json
@@ -36,8 +36,8 @@
     "test:watch": "vitest -w",
     "test:ui": "vitest --ui",
     "test:ci": "vitest run --coverage  --reporter=junit --reporter=default",
-    "lint": "eslint . --ext .ts --max-warnings=0",
-    "lint:fix": "eslint . --fix --ext .ts",
+    "lint": "eslint .  --max-warnings=0",
+    "lint:fix": "eslint . --fix ",
     "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../docs/emitters/typespec-service-csharp/reference"
   },
   "files": [
@@ -61,8 +61,8 @@
     "@azure-tools/typespec-azure-core": "workspace:~",
     "@types/node": "~18.11.19",
     "@typespec/compiler": "workspace:~",
-    "@typespec/eslint-config-typespec": "workspace:~",
-    "@typespec/eslint-plugin": "workspace:~",
+    
+    
     "@typespec/http": "workspace:~",
     "@typespec/library-linter": "workspace:~",
     "@typespec/openapi": "workspace:~",
@@ -70,7 +70,7 @@
     "@typespec/tspd": "workspace:~",
     "@vitest/coverage-v8": "^1.4.0",
     "c8": "^9.1.0",
-    "eslint": "^8.57.0",
+    
     "rimraf": "~5.0.5",
     "typescript": "~5.4.3",
     "vitest": "^1.4.0"
