--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fix-version-mismatch": "syncpack fix-mismatches",
     "format": "pnpm run prettier --write",
     "format:check": "pnpm run prettier --check",
-    "lint": "eslint .",
+    "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
     "pack:all": "chronus pack --pack-destination ./temp/artifacts",
     "preinstall": "npx only-allow pnpm",
