--- a/packages/typespec-azure-playground-website/tsconfig.json
+++ b/packages/typespec-azure-playground-website/tsconfig.json
@@ -24,7 +24,6 @@
     "test/**/*.ts",
     "e2e/**/*.ts",
     "vite.config.ts",
-    "samples/dist/**/*.js",
-    "samples/dist/**/*.d.ts"
+    "samples/dist/samples.ts"
   ]
 }
