--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -51,6 +51,10 @@
     "dist/**",
     "!dist/test/**"
   ],
+  "dependencies": {
+    "pluralize": "^8.0.0",
+    "change-case": "~5.4.3"
+  },
   "peerDependencies": {
     "@azure-tools/typespec-autorest": "workspace:~",
     "@azure-tools/typespec-azure-core": "workspace:~",
@@ -68,6 +72,7 @@
     "@typespec/http": "workspace:~",
     "@typespec/library-linter": "workspace:~",
     "@typespec/openapi": "workspace:~",
+    "@types/pluralize": "^0.0.33",
     "@typespec/rest": "workspace:~",
     "@typespec/tspd": "workspace:~",
     "@typespec/versioning": "workspace:~",
