ignore markdown and test files from needing changelog

--- a/.chronus/config.yaml
+++ b/.chronus/config.yaml
@@ -46,3 +46,7 @@ changelog: ["@chronus/github/changelog", { repo: "azure/typespec-azure" }]
 
 ignore:
   - "@typespec/*"
+
+changedFiles:
+  - "!**/*.md"
+  - "!**/*.test.ts"
