--- a/.github/workflows/website-gh-pages.yml
+++ b/.github/workflows/website-gh-pages.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+      - fix/website-build-omit-core
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -40,7 +41,7 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm --filter "@azure-tools/typespec-azure-website..." --filter "!@typespec/website" run build
+        run: pnpm --filter "@azure-tools/typespec-azure-website..." --filter '!@typespec/website' run build
         env:
           TYPESPEC_WEBSITE_BASE_PATH: "/typespec-azure/"
           NODE_OPTIONS: "--max_old_space_size=4096"
