tryit-pr-tools-rename

--- a/eng/pipelines/pr-tools.yml
+++ b/eng/pipelines/pr-tools.yml
@@ -9,7 +9,8 @@ extends:
     variables:
       - template: /eng/pipelines/templates/variables/globals.yml@self
     stages:
-      - stage: Publish
+      - stage: pr_tools
+        displayName: PR Tools
         jobs:
           - job: publish_playground
             displayName: Publish playground & website
@@ -70,7 +71,7 @@ extends:
             steps:
               - checkout: self
 
-              - script: npx -p @chronus/github-pr-commenter@0.3.0 chronus-github-pr-commenter verify
+              - script: npx -p @chronus/github-pr-commenter@0.4.0 chronus-github-pr-commenter verify
                 displayName: Make comment about changes
                 env:
                   GITHUB_TOKEN: $(azuresdk-github-pat)
