Fix typespec-azure website build for pages (#668)
Building the typespec core website is both time wasted and causing
issues


The env error is because we are not allowed to actually deploy from this
branch but the build passed

--- a/.github/workflows/website-gh-pages.yml
+++ b/.github/workflows/website-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy TypeSpec Website to github pages
+name: Deploy TypeSpec Azure Website to github pages
 
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -40,7 +40,7 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm --filter "@azure-tools/typespec-azure-website..." run build
+        run: pnpm --filter "@azure-tools/typespec-azure-website..." --filter '!@typespec/website' run build
         env:
           TYPESPEC_WEBSITE_BASE_PATH: "/typespec-azure/"
           NODE_OPTIONS: "--max_old_space_size=4096"
