update autorest canonical

--- a/tsconfig.ws.json
+++ b/tsconfig.ws.json
@@ -2,6 +2,7 @@
   "references": [
     { "path": "core/tsconfig.ws.json" },
     { "path": "packages/typespec-autorest/tsconfig.json" },
+    { "path": "packages/typespec-autorest-canonical/tsconfig.json" },
     { "path": "packages/typespec-azure-core/tsconfig.json" },
     { "path": "packages/typespec-azure-resource-manager/tsconfig.json" },
     { "path": "packages/typespec-client-generator-core/tsconfig.json" },
