--- a/packages/typespec-autorest-canonical/package.json
+++ b/packages/typespec-autorest-canonical/package.json
@@ -60,6 +60,7 @@
     "@azure-tools/typespec-autorest": "workspace:~"
   },
   "devDependencies": {
+    "@azure-tools/typespec-autorest": "workspace:~",
     "@azure-tools/typespec-azure-core": "workspace:~",
     "@azure-tools/typespec-client-generator-core": "workspace:~",
     "@types/node": "~18.11.19",
