--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -55,6 +55,7 @@
   ],
   "peerDependencies": {
     "@azure-tools/typespec-azure-core": "workspace:~",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
     "@azure-tools/typespec-client-generator-core": "workspace:~",
     "@typespec/compiler": "workspace:~",
     "@typespec/http": "workspace:~",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@azure-tools/typespec-azure-core": "workspace:~",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
     "@azure-tools/typespec-client-generator-core": "workspace:~",
     "@types/node": "~18.11.19",
     "@typespec/compiler": "workspace:~",
