--- a/packages/typespec-azure-resource-manager/tsconfig.json
+++ b/packages/typespec-azure-resource-manager/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "../../core/tsconfig.base.json",
-  "composite": true,
   "references": [
     { "path": "../../core/packages/compiler/tsconfig.json" },
+    { "path": "../../core/packages/http/tsconfig.json" },
     { "path": "../../core/packages/rest/tsconfig.json" },
     { "path": "../../core/packages/openapi/tsconfig.json" },
-    { "path": "../typespec-azure-core/tsconfig.json" },
-    { "path": "../typespec-autorest/tsconfig.json" }
+    { "path": "../../core/packages/versioning/tsconfig.json" },
+    { "path": "../typespec-azure-core/tsconfig.json" }
   ],
   "compilerOptions": {
     "outDir": "dist",
