--- a/packages/samples/specs/data-plane/tspconfig.yaml
+++ b/packages/samples/specs/data-plane/tspconfig.yaml
@@ -3,6 +3,6 @@ emit:
   - "@typespec/openapi3"
 linter:
   extends:
-    # - "@azure-tools/typespec-azure-core/all"
+    - "@azure-tools/typespec-azure-specs-rulesets/data-plane"
   enable:
     "@azure-tools/typespec-azure-core/no-enum": true
