--- a/packages/samples/specs/resource-manager/tspconfig.yaml
+++ b/packages/samples/specs/resource-manager/tspconfig.yaml
@@ -7,5 +7,6 @@ options:
 linter:
   extends:
     # - "@azure-tools/typespec-azure-resource-manager/all"
+    - "@azure-tools/typespec-azure-specs-rulesets/resource-manager"
   enable:
     "@azure-tools/typespec-azure-core/no-enum": true
