--- a/eng/pipelines/pr-tools.yml
+++ b/eng/pipelines/pr-tools.yml
@@ -71,7 +71,7 @@ extends:
             steps:
               - checkout: self
 
-              - script: npx -p @chronus/github-pr-commenter@0.5.0 chronus-github-pr-commenter verify
+              - script: npx -p @chronus/github-pr-commenter@0.5.0 chronus-github-pr-commenter
                 displayName: Make comment about changes
                 env:
                   GITHUB_TOKEN: $(azuresdk-github-pat)
