New Azure specs ruleset package (#854)
implement #654 
Package designed to provide rulesets for azure specs.

There is a test that makes sure for a given ruleset that all the rules
from dependent linter are explicitly enabled or disabled. This will
ensure that we don't forget to register rules there.

---------

Co-authored-by: Mark Cowlishaw <markcowl@microsoft.com>

--- a/tsconfig.ws.json
+++ b/tsconfig.ws.json
@@ -6,6 +6,7 @@
     { "path": "packages/typespec-azure-core/tsconfig.json" },
     { "path": "packages/typespec-azure-resource-manager/tsconfig.json" },
     { "path": "packages/typespec-client-generator-core/tsconfig.json" },
+    { "path": "packages/typespec-azure-rulesets/tsconfig.json" },
     { "path": "packages/samples/tsconfig.json" }
   ],
   "files": []
