--- a/packages/samples/package.json
+++ b/packages/samples/package.json
@@ -42,6 +42,7 @@
     "@azure-tools/typespec-azure-core": "workspace:~",
     "@azure-tools/typespec-azure-resource-manager": "workspace:~",
     "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-azure-rulesets": "workspace:~",
     "@typespec/compiler": "workspace:~",
     "@typespec/http": "workspace:~",
     "@typespec/openapi": "workspace:~",
