--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test:e2e": "pnpm run-all run test:e2e",
     "test": "pnpm run-all run test",
     "update-latest-docs": "pnpm run-all run update-latest-docs",
-    "watch": "tsc --build ./tsconfig.ws.json --watch"
+    "watch": "tsc --build ./tsconfig.ws.json --watch",
+    "sync-labels": "tsx ./core/eng/common/scripts/labels/sync-labels.ts --config-dir ./eng/config"
   },
   "devDependencies": {
     "@chronus/chronus": "^0.10.2",
@@ -49,6 +50,7 @@
     "prettier-plugin-organize-imports": "~3.2.4",
     "rimraf": "~5.0.7",
     "syncpack": "^12.3.2",
+    "tsx": "^4.10.5",
     "typescript": "~5.4.5",
     "typescript-eslint": "^7.9.0",
     "vitest": "^1.6.0"
