--- a/.github/workflows/consistency.yml
+++ b/.github/workflows/consistency.yml
@@ -35,7 +35,8 @@ jobs:
         if: |
           !startsWith(github.head_ref, 'publish/') &&
           !startsWith(github.head_ref, 'dependabot/') &&
-          !startsWith(github.head_ref, 'backmerge/')
+          !startsWith(github.head_ref, 'backmerge/') &&
+          !startsWith(github.head_ref, 'revert-')
 
       - run: node eng/scripts/validate-core-submodule.js
         name: Check that core submodule is merged to core repo
