--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -55,6 +55,7 @@
     "@azure-tools/typespec-azure-core": "workspace:~",
     "@azure-tools/typespec-azure-resource-manager": "workspace:~",
     "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-azure-rulesets": "workspace:~",
     "@emotion/react": "^11.11.4",
     "@typespec/compiler": "workspace:~",
     "@typespec/http": "workspace:~",
