--- a/packages/typespec-azure-rulesets/package.json
+++ b/packages/typespec-azure-rulesets/package.json
@@ -19,6 +19,7 @@
   ],
   "type": "module",
   "main": "dist/src/index.js",
+  "tspMain": "dist/src/index.js",
   "exports": {
     ".": "./dist/src/index.js"
   },
