--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
+  "postCreateCommand": "git submodule update --recursive --init",
   "customizations": {
     // Configure properties specific to VS Code.
     "vscode": {
