--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
 {
-  "extends": "./core/tsconfig.base.json"
+  "extends": "./core/tsconfig.base.json",
+  "include": ["**/*.ts", "**/*.tsx", "**/.storybook/**/*.ts", "**/.storybook/**/*.tsx"],
+  "exclude": ["**/node_modules/", "**/dist/", "**/build/", "**/coverage/"]
 }
